# Cyberbattle

./: LICENSE.md  MANIFEST.in  README.md  profiles.txt  requirements.txt  setup.cfg  setup.py
cyberbattle/agents/: agent.py  battle_environment.py  simulation.py  simulation_test.py
cyberbattle/agents/attacker/: attacker_interface.py  attacker_interface_test.py  wrapper.py  wrapper_test.py
cyberbattle/agents/attacker/baseline/: custom.py  qlearning.py  random.py
cyberbattle/agents/defender/: tools.py
cyberbattle/agents/defender/baseline/: scan.py
cyberbattle/env/: env_test.py
cyberbattle/env/samples/: little_network.py
cyberbattle/env/utils/: data.py  flow.py  machine.py  network.py  sensor.py  user.py
cyberbattle/utils/: data_viz.ipynb  functions.py  io_utils.py  markov_models.py  profiles.py  profiles_test.py
cyberbattle/utils/datas/: forticloud-traffic-forward-2022-03-29_1121.log.xlsx
cyberbattle/vulnerabilities/: attacks.py  attacks_test.py  outcomes.py  scraping_mitre_attack.py  scraping_vulnerabilities.py
cyberbattle/vulnerabilities/recent_dl/: enterprise-attack.7z
notebooks/: Attacker.ipynb  DeepQlearnerAttacker.ipynb  QlearnerAttacker.ipynb  RandomAttacker.ipynb  Traffic.ipynb
notebooks/CyberBattleAgents/: Environment with deceptive elements.ipynb  Environment with defender.ipynb  Environment without defender.ipynb  GNNlearner.ipynb  Player.ipynb
notebooks/cyberbattle/: Traffic.ipynb
