[metadata]
name = cyberbattle
version = 0.0.1
author = Emilien Grillot
description = Cyber environment in Python with gym like API
url = https://github.com/egrillot/CyberBattleAgents/cyberbattle
long_description = README.md
long_description_content_type = text/markdown
classifiers = Programming Language :: Python :: 3

[Options]
packages = find: